# calculator

./: README.md
untitled/: CMakeLists.txt  calculator.c  calculator.css  calculator.glade  calculator.glade~  calculator.h  console_ui.c  console_ui.h  gtk_ui.c  gtk_ui.h  main.c  operation.c  operation.h  ui.h
